Fixup pressure sensor firmware

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -83,4 +83,4 @@ endif
 
 .PHONY: clean
 clean:
-	@rm -rf $(OBJECTS) $(DEPEND) $(EXECUTABLE) $(EXECUTABLE).map
+	@rm -rf $(OBJECTS) $(DEPEND) $(EXECUTABLE) $(EXECUTABLE).map $(EXECUTABLE).hex
