--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -34,6 +34,8 @@ SRC+= sensors/ms5611_pressure.c
 SRC+= sensors/ltr-329als_light.c
 SRC+= cli_commands.c
 SRC+= usb_uart.c
+SRC+= gps/gps_uart.c
+SRC+= gps/gps.c
 
 ################################################################################
 
