Firmware MVP complete!

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -34,6 +34,7 @@ SRC+= utils/cli.c
 SRC+= utils/i2c.c
 SRC+= utils/rtc.c
 SRC+= utils/button.c
+SRC+= utils/hexdump.c
 SRC+= sensors/sensors.c
 SRC+= sensors/ms5611_pressure.c
 SRC+= sensors/ltr-329als_light.c
@@ -44,6 +45,7 @@ SRC+= gps/gps_uart.c
 SRC+= gps/gps.c
 SRC+= gps/ubx.c
 SRC+= fram.c
+SRC+= gui.c
 
 ################################################################################
 
